--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ html {
 }
 
 body {
-  padding: 2.5rem 13%;
+  padding: 0 13% 2.5rem;
 }
 ul {
   list-style: none;
@@ -45,7 +45,15 @@ a {
   text-decoration: none;
 }
 
-
+/* mistake when building the navbar not using background so position problem there this code is used */
+header{
+  padding-top: 2.5rem;
+  padding-bottom: 1rem;
+  position: fixed;
+  top: 0;
+  width: calc(100% - 26%);
+  background-color: #fff;
+}
 
 /* navbar start */
 #navbar {
