--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,6 +1,12 @@
 @media screen and (max-width: 800px) {
   body {
-    padding: 1.5rem 6%;
+    padding: 0 6% 1.5rem;
+  }
+
+  header{
+    width: calc(100% - 12%);
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 
   /* navbar start */
